@@ -5,7 +5,8 @@ module ActiveScaffold
         link_to page_number, url_options.merge(:page => page_number), options.merge(:class => "as_paginate")
       end
 
-      def pagination_ajax_links(current_page, url_options, options, inner_window, outer_window)
+      def pagination_url_options(url_options = nil)
+        url_options ||= params_for(:action => :index)
         unless active_scaffold_config.store_user_settings
           url_options.merge!(:search => search_params) if search_params.present?
           if active_scaffold_config.list.user.user_sorting?
@@ -13,7 +14,10 @@ module ActiveScaffold
             url_options.merge!(:sort => column.name, :sort_direction => direction)
           end
         end
+        url_options
+      end
 
+      def pagination_ajax_links(current_page, url_options, options, inner_window, outer_window)
         start_number = current_page.number - inner_window
         end_number = current_page.number + inner_window
         start_number = 1 if start_number <= 0
